--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>SSL Logistics - UK Courier Service</title>
 <meta http-equiv="refresh" content="10" >
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
