--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" style="vertical-align: middle;" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <p>SSL Logistics Courier Service. Same Day/Next Day, Call for a free no obligation quote: +447766218668
+    <p>SSL Logistics Courier Service. Same Day/Next Day, Call for a free no obligation quote: <b>+447766218668</b>
     </p>
   </div>
 <!--
