--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 <!-- End page content -->
 </div>
 
-<!-- Google Map -->
-<div id="googleMap" class="w3-grayscale" style="width:100%;height:450px;"></div>
+<!-- Google Map 
+<div id="googleMap" class="w3-grayscale" style="width:100%;height:450px;"></div>-->
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
